--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,11 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .container {
     display: grid;
     grid-template-rows: repeat(6,100px) ;
-    grid-template-columns: 2fr 2fr 1fr ;
+    grid-template-columns: 3fr 3fr 2fr ;
     gap: 10px;
     margin-bottom: 20px;
   }
