--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,23 +2,23 @@
 @tailwind components;
 @tailwind utilities;
 
-.container {
+/* .container {
     display: grid;
     grid-template-rows: repeat(6,100px) ;
     grid-template-columns: 3fr 3fr 2fr ;
     gap: 10px;
     margin-bottom: 20px;
-  }
+  } */
   
-  .box-1{
+  /* .box-1{
     background-color: aqua;
     grid-area: 1/1/4/2;
   }
   .box-2{
     background-color: blue;
     grid-area: 4/1/7/2;
-  }
-  .box-3{
+  } */
+  /* .box-3{
     background-color: blueviolet;
     grid-area: 1/2/7/3;
     
@@ -27,7 +27,7 @@
     background-color: brown;
     grid-area: 1/3/4/4;
     
-  }
+  } 
   .box-5{
     background-color: chartreuse;
     grid-area: 4/3/7/4;
@@ -100,4 +100,5 @@
   .dbox-4{
     background-color: brown;
   }
+  */
 
