--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,84 +1,17 @@
-body {
-  margin: 0;
-  display: block;
-  background-color: rgb(151, 166, 177);
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-.footer {
-  --bg-opacity: 1;
-  background-color: #2f466c !important;
-  display: block;
-  color: #fff;
-  padding: 5px 0px;
-  margin-top: 60px;
-}
-
-@media (min-width: 768px) {
-  .css-100 .filter-inner-cont {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    margin-top: 50px;
-    -webkit-box-pack: justify;
-    -webkit-justify-content: space-between;
-    justify-content: space-between;
+@layer components {
+  .card {
+    background-color: theme("colors.white");
+    border-radius: theme("borderRadius.lg");
+    padding: theme("spacing.6");
+    box-shadow: theme("boxShadow.xl");
   }
 }
-
-.css-100 .filter-inner-cont ul {
-  width: 80%;
-  margin-left: 5%;
-  margin-right: 5%;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  gap: 8px;
-  padding-top: 20px;
-  font-family: "Graphik Webfont", -apple-system, "Helvetica Neue", "Droid Sans",
-    Arial, sans-serif;
+.footer-1 {
+  font-family: Arial;
   font-weight: 400;
-  font-size: 13px;
-  line-height: 18px;
-}
-
-ol,
-ul {
-  list-style: none;
-}
-
-.css-100 .filter-inner-cont ul li a {
-  font-family: nbkSerif, serif;
-  color: #fff;
-  text-decoration: none;
-}
-
-.lia-css {
-  cursor: pointer;
-}
-
-.css-100 .filter-inner-cont ul li span {
-  font-family: nbkbold, nbktimes, Meiryo, Osaka, sans-serif;
-}
-
-.css-footer20 {
-  width: 100%;
-  height: 90px;
-  position: relative;
-  background-color: #232347 !important;
-  color: #fff;
-  text-align: center;
-  margin: 0%;
-  padding: 35px 20px;
-}
-
-.css-footer21 {
-  display: flex;
-}
-.css-footer21 li {
-  padding-left: 25%;
+  font-size: 15px;
 }
